2009-04-16 herumi <herumi@nifty.com>

        * ucs4string.cpp : fix ucs4string.split()

        * fix longjmp destroy stack

        * OSCompat.cpp : fix correct cosole handle for WriteConsole

        * OSCompat.cpp : add getCommandLine for windows

2009-04-16  higepon  <higepon@users.sourceforge.jp>

        * ErrorProcedures.h (TRY_WITHOUT_DSTR): Fixed.

        * PortProcedures.cpp (formatEx): Added TRY_WITHOUT_DSTR and CATCH.

2009-04-15 herumi <herumi@nifty.com>

        * windows installer script for innosetup

        * OSCompat.cpp : add getLastErrorMessage() for windows

2009-04-15  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.h (scheme): Addes isLastErrorAcessError();

2009-04-14  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp : Added getCurrentDirectory() and setCurrentDirectory();

        * Removed stringError, use getLastErrorMessage();

2009-04-14 herumi <herumi@nifty.com>

        * OSCompat.cpp : fix some bug and test\test.bat runs well

        * support 64-bit large file

2009-04-14  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp (getLastErrorMessage): Added.

2009-04-13 herumi <herumi@nifty.com>

        * OSCompat.cpp : implementation for Windows for UTF16

2009-04-13  higepon  <higepon@users.sourceforge.jp>

        * main.cpp (main): Not to touch SIGINT.

2009-04-13  kokosabu  <kokosabu@gmail.com>

        * VM.h : Changed std::map => gc_vector.

2009-04-12  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp (scheme::nativeTranscoder): Added native-transcoder for Windows.

2009-04-12  kokosabu  <kokosabu@gmail.com>

        * Added : manage active ports.

2009-04-12  higepon  <higepon@users.sourceforge.jp>

        * Replaced (srfi :64) from ikarus-srfi.

        * lib/srfi/%3a1/lists.sls : Updated from ikarus-srfi.

        * test/lists.scm : Added from ikarus-srfi.

2009-04-11  higepon  <higepon@users.sourceforge.jp>

        * OSCompat.cpp: Adjust open flags.
